Configured new Chrome path

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,15 @@
   <groupId>com.awsJenkins</groupId>
   <artifactId>AWSSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+  <build>
+<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>3.0.0-M5</version>
+</plugin>
+</plugins>
+</build>
   <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
