--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,22 @@
   <artifactId>AWSSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
-<plugins>
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-surefire-plugin</artifactId>
-<version>3.0.0-M5</version>
-</plugin>
-</plugins>
-</build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+			</plugin>
+		</plugins>
+	</build>
   <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
